tests/suite/fail/regression/fuzz/fuzz_double_op.ny
fn main() { let x = 1 ++ 2 } //~ ERROR
